src/test/ui/type-alias-impl-trait/issue-53598.stderr
error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-53598.rs:19:42
   |
LL |       fn foo<T: Debug>(_: T) -> Self::Item {
   |  __________________________________________^
LL | |
LL | |         S::<T>(Default::default())
LL | |     }
   | |_____^

error: aborting due to previous error

